Updating the background pic and text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<p>
 							I am a software developer with a passion for problem solving and learning. I'm a graduate from 
 							Gonzaga University with a degree in Management Information Systems and I worked as a developer for the US Government for two years.
-							Currently, I'm located in Boise, Idaho, and when I'm not at my computer, I'm at the gym, snowboarding, or spending time with family.  
+							Currently, I'm located in Boise, Idaho, and when I'm not at my computer, I'm at the gym, exploring the city, or spending time with family.  
 						</p>
 					</header>
 				</section>
