--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<img src="images/JessePic.jpeg" alt="" class="profilePic" />
+								<img src="images/JessePic.jpg" alt="" class="profilePic" />
 								<h1><a href="index.html" id="logo">Jesse Li</a></h1>
 								<hr />
 								<p>Junior Software Developer</p>
@@ -106,7 +106,7 @@
 								<a href="#" class="image techLogo "><img src="images/git.png" alt="" /></a>
 								<header>
 									<h3 class="centeredText"><a>Git</a></h3>
-								</header>
+								</header>	
 							</div>
 							
 					</div>
