--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html" class="navButton">Home</a></li> 
-								<li><a href="about.html">About Me</a></li>
-								<li><a href="skills.html">Skills</a></li>
+								<li><a href="index.html" class="navButton">Home</a></li>  
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
@@ -72,7 +70,7 @@
 						<p>
 							I am a software developer with a passion for problem solving and learning. I'm a graduate from 
 							Gonzaga University with a degree in Management Information Systems and I worked as a developer for the US Government for two years.
-							Currently, I'm located in Boise, Idaho, and when I'm not at my computer, I'm at the gym, exploring the city, or spending time with family.  
+							Currently, I'm located in Boise, Idaho, and when I'm not at my computer, I'm at the gym, exploring the city, or spending time with family!  
 						</p>
 					</header>
 				</section>
