--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 							 <form action="https://formsubmit.co/jesselicloud@gmail.com" method="POST">
 								<input class ="formInput" type="text" name="name" placeholder="Name" required>
 								<input class ="formInput" type="email" name="email" placeholder="Email Address" required> 
-								<textarea class ="formInput" name ="message" rows="5" cols = "20" placeholder="Write your message here" required></textarea>
+								<textarea class ="formInput" name ="message" rows="5" cols = "20" placeholder="Write your message here!" required></textarea>
 								<input type="hidden" name="_subject" value="Portfolio Site Submission!"> 
 								<button type="submit">Send</button>
 						   </form>
