--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<section id="banner">
 					<header>
 						<h2>About Me</h2>
-						<p>
+						<p class="paragraph">
 							I am a software developer with a passion for problem solving and learning. I'm a graduate from 
 							Gonzaga University with a degree in Management Information Systems and I worked as a developer for the US Government for two years.
 							Currently, I'm located in Boise, Idaho, and when I'm not at my computer, I'm at the gym, exploring the city, or spending time with family!  
@@ -138,12 +138,13 @@
 				 
 					<div class="row">
 						<article class="mobile special"> 
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/U3avqEYvQ9U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/U3avqEYvQ9U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin-left: 275px;"></iframe>
 							<header>
 								<h3><a href="#">Trainer Cheat Sheet</a></h3>
 							</header>
-							<p>
-							Technologies: Python & Django
+							<p class="paragraph">
+							Technologies: Python & Django </br> 
+							Functionality: Data Gathering Via API Requests, performing calculations to make data more useful, </br>generating user reports with cleaned data
 							</p>
 						</article>
 
