Added Javascript to skillset & made contact form prettier

--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
 							</div>
 						
 						<div class="row">
-						
+							<div>	
+								<a href="#" class="image techLogo"><img src="images/javascript.jpg" alt="" /></a>
+								<header>
+									<h3 class="centeredText"><a>JavaScript</a></h3>
+								</header>
+							</div>
 							<div>	
 								<a href="#" class="image techLogo"><img src="images/html.png" alt="" /></a>
 								<header>
